antlr/out/parser/AnoParser.ts
// Generated from Ano.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { AnoListener } from "./AnoListener";
import { AnoVisitor } from "./AnoVisitor";


export class AnoParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly T__48 = 49;
	public static readonly T__49 = 50;
	public static readonly T__50 = 51;
	public static readonly T__51 = 52;
	public static readonly T__52 = 53;
	public static readonly T__53 = 54;
	public static readonly T__54 = 55;
	public static readonly T__55 = 56;
	public static readonly T__56 = 57;
	public static readonly T__57 = 58;
	public static readonly T__58 = 59;
	public static readonly T__59 = 60;
	public static readonly TIMEFMT = 61;
	public static readonly DATEFMT = 62;
	public static readonly STRING = 63;
	public static readonly NUMERIC = 64;
	public static readonly NAME = 65;
	public static readonly ML_COMMENT = 66;
	public static readonly SL_COMMENT = 67;
	public static readonly WS = 68;
	public static readonly ANY_OTHER = 69;
	public static readonly RULE_model = 0;
	public static readonly RULE_table = 1;
	public static readonly RULE_column = 2;
	public static readonly RULE_datatype = 3;
	public static readonly RULE_precision = 4;
	public static readonly RULE_numsize = 5;
	public static readonly RULE_scale = 6;
	public static readonly RULE_pk = 7;
	public static readonly RULE_unique = 8;
	public static readonly RULE_fk = 9;
	public static readonly RULE_fkParent = 10;
	public static readonly RULE_fkChild = 11;
	public static readonly RULE_fkCols = 12;
	public static readonly RULE_columns = 13;
	public static readonly RULE_randomType = 14;
	public static readonly RULE_conversion = 15;
	public static readonly RULE_transformation = 16;
	public static readonly RULE_distribution = 17;
	public static readonly RULE_distributeprog = 18;
	public static readonly RULE_workTask = 19;
	public static readonly RULE_sqlBefore = 20;
	public static readonly RULE_sqlAfter = 21;
	public static readonly RULE_sql = 22;
	public static readonly RULE_taskGroup = 23;
	public static readonly RULE_update = 24;
	public static readonly RULE_selectionKey = 25;
	public static readonly RULE_anonymization = 26;
	public static readonly RULE_propagate = 27;
	public static readonly RULE_propagateColumn = 28;
	public static readonly RULE_tempKey = 29;
	public static readonly RULE_mask = 30;
	public static readonly RULE_uniqueMask = 31;
	public static readonly RULE_format = 32;
	public static readonly RULE_transform = 33;
	public static readonly RULE_transformprog = 34;
	public static readonly RULE_convert = 35;
	public static readonly RULE_convertprog = 36;
	public static readonly RULE_source = 37;
	public static readonly RULE_sourceColumn = 38;
	public static readonly RULE_sourceSequence = 39;
	public static readonly RULE_sourceFile = 40;
	public static readonly RULE_randomOrder = 41;
	public static readonly RULE_sourceRandom = 42;
	public static readonly RULE_randomInteger = 43;
	public static readonly RULE_randomDecimal = 44;
	public static readonly RULE_randomTime = 45;
	public static readonly RULE_randomDate = 46;
	public static readonly RULE_randomdatetime = 47;
	public static readonly RULE_randomize = 48;
	public static readonly RULE_randomizeType = 49;
	public static readonly RULE_offset = 50;
	public static readonly RULE_flatNoise = 51;
	public static readonly RULE_percentageNoise = 52;
	public static readonly RULE_shuffle = 53;
	public static readonly RULE_map = 54;
	public static readonly RULE_mapUsage = 55;
	public static readonly RULE_input = 56;
	public static readonly RULE_output = 57;
	public static readonly RULE_inputOutput = 58;
	public static readonly RULE_create = 59;
	public static readonly RULE_distribute = 60;
	public static readonly RULE_createTable = 61;
	public static readonly RULE_createChildColumns = 62;
	public static readonly RULE_createParentColumns = 63;
	public static readonly RULE_minRows = 64;
	public static readonly RULE_where = 65;
	public static readonly RULE_delete = 66;
	public static readonly RULE_method = 67;
	public static readonly RULE_cascading = 68;
	public static readonly RULE_notIn = 69;
	public static readonly RULE_notExists = 70;
	public static readonly RULE_deleteTable = 71;
	public static readonly RULE_childCols = 72;
	public static readonly RULE_parentCols = 73;
	public static readonly RULE_setNull = 74;
	public static readonly RULE_erase = 75;
	public static readonly RULE_eraseTable = 76;
	public static readonly RULE_sar = 77;
	public static readonly RULE_sarTable = 78;
	public static readonly RULE_maskColumn = 79;
	public static readonly RULE_bracketStart = 80;
	public static readonly RULE_bracketEnd = 81;
	public static readonly RULE_columnid = 82;
	public static readonly RULE_tableid = 83;
	public static readonly RULE_uniqueid = 84;
	public static readonly RULE_datetime = 85;
	public static readonly RULE_time = 86;
	public static readonly RULE_date = 87;
	public static readonly RULE_filename = 88;
	public static readonly RULE_textin = 89;
	public static readonly RULE_integer = 90;
	public static readonly RULE_posint = 91;
	public static readonly RULE_decimal = 92;
	public static readonly RULE_taskid = 93;
	public static readonly RULE_namespace = 94;
	public static readonly RULE_param = 95;
	public static readonly RULE_id = 96;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"model", "table", "column", "datatype", "precision", "numsize", "scale", 
		"pk", "unique", "fk", "fkParent", "fkChild", "fkCols", "columns", "randomType", 
		"conversion", "transformation", "distribution", "distributeprog", "workTask", 
		"sqlBefore", "sqlAfter", "sql", "taskGroup", "update", "selectionKey", 
		"anonymization", "propagate", "propagateColumn", "tempKey", "mask", "uniqueMask", 
		"format", "transform", "transformprog", "convert", "convertprog", "source", 
		"sourceColumn", "sourceSequence", "sourceFile", "randomOrder", "sourceRandom", 
		"randomInteger", "randomDecimal", "randomTime", "randomDate", "randomdatetime", 
		"randomize", "randomizeType", "offset", "flatNoise", "percentageNoise", 
		"shuffle", "map", "mapUsage", "input", "output", "inputOutput", "create", 
		"distribute", "createTable", "createChildColumns", "createParentColumns", 
		"minRows", "where", "delete", "method", "cascading", "notIn", "notExists", 
		"deleteTable", "childCols", "parentCols", "setNull", "erase", "eraseTable", 
		"sar", "sarTable", "maskColumn", "bracketStart", "bracketEnd", "columnid", 
		"tableid", "uniqueid", "datetime", "time", "date", "filename", "textin", 
		"integer", "posint", "decimal", "taskid", "namespace", "param", "id",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'table'", "'column'", "'size'", "'scale'", "'primary-key'", 
		"'unique-key'", "'foreign-key'", "','", "'conversion'", "'transformation'", 
		"'distribution'", "'sql-before'", "'sql-after'", "'task'", "'update'", 
		"'selection-key'", "'propagate'", "'.'", "'temporary-value'", "'mask'", 
		"'unique'", "'format'", "'transform'", "'convert'", "'sequence'", "'file'", 
		"'random-order'", "'random-integer'", "'random-decimal'", "'random-time'", 
		"'random-date'", "'random-datetime'", "'randomize'", "'type'", "'offset'", 
		"'flat-noise'", "'percentage-noise'", "'shuffle'", "'map'", "'encrypted'", 
		"'input'", "'output'", "'input-output'", "'create'", "'distribute'", "'child'", 
		"'parent'", "'minimum-rows'", "'where'", "'delete'", "'method'", "'cascading'", 
		"'not-in'", "'not-exists'", "'cascade'", "'setnull'", "'erase'", "'sar'", 
		"'{'", "'}'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, "TIMEFMT", "DATEFMT", 
		"STRING", "NUMERIC", "NAME", "ML_COMMENT", "SL_COMMENT", "WS", "ANY_OTHER",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(AnoParser._LITERAL_NAMES, AnoParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return AnoParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Ano.g4"; }

	// @Override
	public get ruleNames(): string[] { return AnoParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return AnoParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(AnoParser._ATN, this);
	}
	// @RuleVersion(0)
	public model(): ModelContext {
		let _localctx: ModelContext = new ModelContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, AnoParser.RULE_model);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 197;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === AnoParser.T__0) {
				{
				{
				this.state = 194;
				this.table();
				}
				}
				this.state = 199;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 203;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === AnoParser.T__6) {
				{
				{
				this.state = 200;
				this.fk();
				}
				}
				this.state = 205;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 209;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === AnoParser.T__8) {
				{
				{
				this.state = 206;
				this.conversion();
				}
				}
				this.state = 211;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 215;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === AnoParser.T__9) {
				{
				{
				this.state = 212;
				this.transformation();
				}
				}
				this.state = 217;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 221;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === AnoParser.T__10) {
				{
				{
				this.state = 218;
				this.distribution();
				}
				}
				this.state = 223;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 227;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === AnoParser.STRING || _la === AnoParser.NAME) {
				{
				{
				this.state = 224;
				this.randomType();
				}
				}
				this.state = 229;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 230;
			this.sql();
			this.state = 234;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === AnoParser.T__13) {
				{
				{
				this.state = 231;
				this.taskGroup();
				}
				}
				this.state = 236;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 237;
			this.match(AnoParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public table(): TableContext {
		let _localctx: TableContext = new TableContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, AnoParser.RULE_table);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 239;
			this.match(AnoParser.T__0);
			this.state = 240;
			this.tableid();
			this.state = 244;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === AnoParser.T__1) {
				{
				{
				this.state = 241;
				this.column();
				}
				}
				this.state = 246;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 248;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === AnoParser.T__4) {
				{
				this.state = 247;
				this.pk();
				}
			}

			this.state = 253;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === AnoParser.T__5) {
				{
				{
				this.state = 250;
				this.unique();
				}
				}
				this.state = 255;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public column(): ColumnContext {
		let _localctx: ColumnContext = new ColumnContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, AnoParser.RULE_column);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 256;
			this.match(AnoParser.T__1);
			this.state = 257;
			this.datatype();
			this.state = 258;
			this.columnid();
			this.state = 260;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === AnoParser.T__2) {
				{
				this.state = 259;
				this.precision();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public datatype(): DatatypeContext {
		let _localctx: DatatypeContext = new DatatypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, AnoParser.RULE_datatype);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 262;
			this.match(AnoParser.NAME);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public precision(): PrecisionContext {
		let _localctx: PrecisionContext = new PrecisionContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, AnoParser.RULE_precision);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 264;
			this.numsize();
			this.state = 266;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === AnoParser.T__3) {
				{
				this.state = 265;
				this.scale();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public numsize(): NumsizeContext {
		let _localctx: NumsizeContext = new NumsizeContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, AnoParser.RULE_numsize);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 268;
			this.match(AnoParser.T__2);
			this.state = 269;
			this.posint();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public scale(): ScaleContext {
		let _localctx: ScaleContext = new ScaleContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, AnoParser.RULE_scale);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 271;
			this.match(AnoParser.T__3);
			this.state = 272;
			this.posint();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pk(): PkContext {
		let _localctx: PkContext = new PkContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, AnoParser.RULE_pk);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 274;
			this.match(AnoParser.T__4);
			this.state = 275;
			this.columns();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public unique(): UniqueContext {
		let _localctx: UniqueContext = new UniqueContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, AnoParser.RULE_unique);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 277;
			this.match(AnoParser.T__5);
			this.state = 278;
			this.uniqueid();
			this.state = 279;
			this.columns();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fk(): FkContext {
		let _localctx: FkContext = new FkContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, AnoParser.RULE_fk);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 281;
			this.match(AnoParser.T__6);
			this.state = 282;
			this.fkParent();
			this.state = 283;
			this.fkChild();
			this.state = 285;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 12, this._ctx) ) {
			case 1:
				{
				this.state = 284;
				this.setNull();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fkParent(): FkParentContext {
		let _localctx: FkParentContext = new FkParentContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, AnoParser.RULE_fkParent);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 287;
			this.fkCols();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fkChild(): FkChildContext {
		let _localctx: FkChildContext = new FkChildContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, AnoParser.RULE_fkChild);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 289;
			this.fkCols();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fkCols(): FkColsContext {
		let _localctx: FkColsContext = new FkColsContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, AnoParser.RULE_fkCols);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 291;
			this.tableid();
			this.state = 292;
			this.columns();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public columns(): ColumnsContext {
		let _localctx: ColumnsContext = new ColumnsContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, AnoParser.RULE_columns);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 294;
			this.columnid();
			this.state = 299;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === AnoParser.T__7) {
				{
				{
				this.state = 295;
				this.match(AnoParser.T__7);
				this.state = 296;
				this.columnid();
				}
				}
				this.state = 301;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public randomType(): RandomTypeContext {
		let _localctx: RandomTypeContext = new RandomTypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, AnoParser.RULE_randomType);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 302;
			this.id();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public conversion(): ConversionContext {
		let _localctx: ConversionContext = new ConversionContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, AnoParser.RULE_conversion);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 304;
			this.match(AnoParser.T__8);
			this.state = 305;
			this.namespace();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public transformation(): TransformationContext {
		let _localctx: TransformationContext = new TransformationContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, AnoParser.RULE_transformation);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 307;
			this.match(AnoParser.T__9);
			this.state = 308;
			this.namespace();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public distribution(): DistributionContext {
		let _localctx: DistributionContext = new DistributionContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, AnoParser.RULE_distribution);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 310;
			this.match(AnoParser.T__10);
			this.state = 311;
			this.namespace();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public distributeprog(): DistributeprogContext {
		let _localctx: DistributeprogContext = new DistributeprogContext(this._ctx, this.state);
		this.enterRule(_localctx, 36, AnoParser.RULE_distributeprog);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 313;
			this.match(AnoParser.NAME);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
